--- a/src/main/resources/assets/elementalcraft/lang/zh_cn.json
+++ b/src/main/resources/assets/elementalcraft/lang/zh_cn.json
@@ -264,8 +264,8 @@
   "elementalcraft.page.inertcrystal0": "要获得$(item)惰性水晶$()，你需要深入地下、寻找并开采$(item)惰性水晶矿$()。",
   "elementalcraft.page.containedcrystal0": "$(item)稳定水晶$()是$(thing)元素器械$()的主要组成部分。$(br2)只需将$(item)惰性水晶$()用$(item)金粒$()包裹，水晶自身的性质就不会为元素扰动，但其与元素发生作用的能力是有所保留的。",
   "elementalcraft.page.elementpipe0": "$(item)元素导管$()，顾名思义，用于$(thing)传输元素$()，它们最主要的作用是向$(thing)元素器械$()输送相应的元素。$(br2)你可以右击导管的$(thing)中间段$()或$(thing)连接点$()，以切换所指导管的连接状态：$(thing)连接$()、$(thing)断开$()、$(thing)输入$()或$(thing)输出$()。$(br2)导管有三个等级：$(thing)弱化型$()、$(thing)普通型$()和$(thing)强化型$()，越高级的导管承载能力越强。",
-  "elementalcraft.page.whiterock0": "$(item)白石$()是合成$(thing)进阶元素器械$()和$(thing)祭坛$()的重要材料。$(br2)只需将$(item)石头$()放入$(ec:infuser)灌注器$()并注入$(thing)地元素$()即可得到白石。$(br2)当然，它也是十分漂亮的建筑材料。",
-  "elementalcraft.page.element_holder0": "$(item)元素球$()一方面可被用于$(thing)储存和转运元素$()，另一方面也能为$(thing)法术$()的施用供应元素。$(br2)要填充元素球，手持之并右击$(thing)同一种元素$()的$(ec:source)源点$()即可；要转移元素，手持之并右击任意$(thing)元素器械$()即可。",
+  "elementalcraft.page.whiterock0": "$(item)白石$()是合成$(thing)进阶元素器械$()和$(item)祭坛$()的重要材料。$(br2)只需将$(item)石头$()放入$(ec:infuser)灌注器$()并注入$(thing)地元素$()即可得到白石。$(br2)当然，它也是十分漂亮的建筑材料。",
+  "elementalcraft.page.element_holder0": "$(item)元素球$()一方面可被用于$(thing)储存和转移元素$()，另一方面也能为$(thing)法术$()的施用供应元素。$(br2)要填充元素球，手持之并右击$(thing)同一种元素$()的$(ec:source)源点$()即可；要转移元素，手持之并右击消耗$(thing)同一种元素$()的$(item)祭坛$()即可。",
   "elementalcraft.page.focus0": "$(item)法杖$()是$(thing)施用法术$()的道具。$(br2)要为法杖附加法术，你可以在$(item)铁砧$()中将法杖和特定法术的$(item)卷轴$()结合。$(br2)一个法杖可被附上多条法术，$(thing)按住 Shift 并滚动鼠标滚轮$()以切换法术。",
   "elementalcraft.page.spell_desk0": "$(item)法术桌$()是合成$(item)法术卷轴$()的地方。$(br2)先铺上$(item)卷轴纸$()，再用$(item)元素水晶$()为其附上魔力。成品卷轴所包含的法术与所用水晶同属一种元素，并且水晶的数目越多，获得成品的概率越大。",
   "elementalcraft.page.shards0": "$(item)原始元素碎片$()是$(thing)元素$()在$(thing)生物$()体内的存在形式，不同种类的生物往往凝聚有不同的元素。$(br2)具象的元素碎片可以在$(l:instruments/evaporator)蒸馏器$()中转化为抽象的元素，也可以作为$(thing)催化剂$()提高$(item)钻石$()转化为$(item)元素宝石$()的效率。",
