--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.16.4-2.5.12:
+
+- fix an ore dupping glitch with mekanism (again, next time I hear about this issue I'm turning off mekanism interaction for good)
+- fix fus and wii runes recipes (issue #43)
+
+
 1.16.4-2.5.11:
 
 - pure ore now use its own tag
