--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -246,17 +246,20 @@
   "tooltip.elementalcraft.autosmelt_infused": "Autosmelt - Affected by fortune",
   "tooltip.elementalcraft.fastdraw_infused": "Faster Draw",
   "tooltip.elementalcraft.dodge_infused": "Dodge",
+  "tooltip.elementalcraft.element_cost_reduction_infusion": "%s cost reduction",
 
   "tooltip.elementalcraft.scroll_of": "Scroll of %s",
   "tooltip.elementalcraft.pure_ore": "Pure %s Chunk",
   "tooltip.elementalcraft.on_spell_use": "During spell cast:",
   "tooltip.elementalcraft.spell_effect_on_use": "When applied:",
   "tooltip.elementalcraft.consumes": "Consumes %s",
+  "tooltip.elementalcraft.cooldown": "Cooldown: %ds",
   "tooltip.elementalcraft.contains": "Contains %s",
   "tooltip.elementalcraft.percent_full": "%s%% full",
   "tooltip.elementalcraft.max_amount": "Limited to %d",
   "tooltip.elementalcraft.incompatibilities": "Incompatible With:",
   "tooltip.elementalcraft.chance": "Chance: %s%%",
+  "tooltip.elementalcraft.optional": "Optional",
   
   "tooltip.elemntalcraft.element_amount.0": "Tiny Amount",
   "tooltip.elemntalcraft.element_amount.1": "Low Amount",
