--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+1.16.5-2.7.5 and 1.17.1-3.0.3:
+
+- fix source spawn config
+
+
 1.16.5-2.7.4 and 1.17.1-3.0.2:
 
 - add a config to disable source spawn
