--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.16.5-2.7.6:
+
+- fix improved binder destroying tools
+- fix acceleration shrine upgrade shape
+
+
 1.16.5-2.7.5 and 1.17.1-3.0.3:
 
 - fix source spawn config
