--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+1.16.5-2.7.7:
+
+- new shrine: spring shrine
+- new block: filling shrine upgrade
+- improved source exhaustion mechanic
+- reduced overloading shrine element consumption
+- clients are now only aware of ther own spell colldown
+- fix shrine upgrades destroying on block update
+- fix spell cooldown display for some spells
+
+
 1.16.5-2.7.6:
 
 - fix improved binder destroying tools
