--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -144,6 +144,7 @@
   "block.elementalcraft.enderlockshrine": "Ender Lock Shrine",
   "block.elementalcraft.breedingshrine": "Breeding Shrine",
   "block.elementalcraft.groveshrine": "Wild Grove Shrine",
+  "block.elementalcraft.springshrine": "Spring Shrine",
   
   "block.elementalcraft.shrine_upgrade_acceleration": "Acceleration Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_range": "Range Shrine Upgrade",
@@ -160,6 +161,7 @@
   "block.elementalcraft.shrine_upgrade_mystical_grove": "Mystical Grove Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_stem_pollination": "Stem Pollination Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_protection": "Protection Shrine Upgrade",
+  "block.elementalcraft.shrine_upgrade_filling": "Filling Shrine Upgrade",
 
   "block.elementalcraft.crystalore": "Inert Crystal Ore",
   "block.elementalcraft.whiterock": "White Rock",
@@ -285,6 +287,7 @@
   "tooltip.elementalcraft.mystical_grove": "Plant mystical flowers instead of traditional flowers",
   "tooltip.elementalcraft.stem_pollination": "Stem crops can now be grown to fruit",
   "tooltip.elementalcraft.protection": "Only affet hostiles",
+  "tooltip.elementalcraft.filling": "Fill tank with water",
 
   "message.elementalcraft.connect": "Connected",
   "message.elementalcraft.disconnect": "Disconnected",
