--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.16.5-2.7.8:
+
+- fix filling shrine upgrade shape
+- fix shrine upgrade block upgrade
+
+
 1.16.5-2.7.7:
 
 - new shrine: spring shrine
