--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -63,6 +63,7 @@
   "item.elementalcraft.shrine_upgrade_core": "Shrine Upgrade Core",
   "item.elementalcraft.scroll_paper": "Scroll Paper",
   "item.elementalcraft.springaline_shard": "Springaline Shard",
+  "item.elementalcraft.solar_prism": "Solar Prism",
   
   "item.elementalcraft.fire_shard": "Raw Fire Shard",
   "item.elementalcraft.water_shard": "Raw Water Shard",
