--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+1.17.1-3.1.1:
+
+- new item: solar prism
+- enderlock shrine does not affect commands anymore
+- air mill now require an air crystal instead of a contained crystal
+- fix shrine upgrades breaking on load
+- fix air mill dropping when placed
+- fix pylon shrine not placeable
+
+
 1.17.1-3.1.0:
 
 - new blocks: springaline block and cluster
