--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+1.16.5-2.7.9:
+
+- air mill now require an air crystal instead of a contained crystal
+- fix shrine upgrades breaking on load
+- fix a server crash
+
+
 1.16.5-2.7.8:
 
 - fix filling shrine upgrade shape
