--- a/src/main/resources/assets/elementalcraft/lang/ru_ru.json
+++ b/src/main/resources/assets/elementalcraft/lang/ru_ru.json
@@ -27,7 +27,7 @@
 "item.elementalcraft.airsword": "Воздушный меч",
 
 "item.elementalcraft.inertcrystal": "Инертный кристал",
-"item.elementalcraft.containedcrystal": "Содержащийся кристалл",
+"item.elementalcraft.contained_crystal": "Содержащийся кристалл",
 "item.elementalcraft.purecrystal": "Чистый кристал",
 "item.elementalcraft.firecrystal": "Огненый кристал",
 "item.elementalcraft.watercrystal": "Водный кристал",
@@ -100,7 +100,7 @@
 "elementalcraft.page.source0": "Источники $(thing) $() - это естественные места, где сходятся элементы $(thing) $(). $(br2) Странно рекомендуется немного изучить и найти источники $(thing) $() хотя бы по одному для каждого $(thing) element $(). $(br) Также рекомендуется отметить их место, чтобы легче было найти их обратно, когда они вам понадобятся.",
 "elementalcraft.page.source1": "$(thing) Air Source $() найдена естественным образом.",
 "elementalcraft.page.inertcrystal0": "Чтобы получить $(item) Inert Crystal $(), начните копать под землей и добыть $(item) Inert Crystal Ore $().",
-"elementalcraft.page.containedcrystal0": "$(item) Содержащиеся кристаллы $() являются основными компонентами инструментов $(thing) $(). $(br) Покрывая $(item) инертный кристалл $() $(thing) gold $(), вы становитесь может предотвратить его изменение с помощью $(thing) elements $(), не теряя своей способности взаимодействовать с ними.",
+"elementalcraft.page.contained_crystal0": "$(item) Содержащиеся кристаллы $() являются основными компонентами инструментов $(thing) $(). $(br) Покрывая $(item) инертный кристалл $() $(thing) gold $(), вы становитесь может предотвратить его изменение с помощью $(thing) elements $(), не теряя своей способности взаимодействовать с ними.",
 "elementalcraft.page.elementpipe0": "$(item) Каналы $() используются для транспортировки элементов $(thing) $() на расстояние, их основное назначение - предоставить $(thing) instruments $() требуемый элемент $(thing) $(). $(br2) вы можете настроить канал $(item) $(), щелкнув правой кнопкой мыши раздел или ядро, чтобы изменить его с $(thing) connected $(), $(thing) disconected $(), $(thing) insert $() или $(thing) извлечь $().",
 "elementalcraft.page.whiterock0": "$(item) Whiterock $() - это $(thing), пропитанная землей$() $(item) Stone $(). $(br) Он используется при создании продвинутых $(thing) инструментов $() и $( thing) shrines $(). $(br) Чтобы получить его, просто поместите $(item) stone $(). в $(ec:infuser).",
 
