--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+1.17.1-3.1.2:
+
+- hide mystical grove shrien upgrade in absance of botania
+- ported all changes from 1.16.5-2.7.9
+
+
+1.16.5-2.7.9:
+
+- air mill now require an air crystal instead of a contained crystal
+- fix shrine upgrades breaking on load
+- fix a server crash
+
+
 1.17.1-3.1.1:
 
 - new item: solar prism
