--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+1.17.1-3.1.4:
+
+- added back staff sweep attack
+- added back jei interaction
+- added back mixins
+- instruments don't lookup recipes if they are empty
+- fix gem crystalizer
+
+
 1.17.1-3.1.3:
 
 - removed mixins json file
