--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -216,6 +216,7 @@
   "elementalcraft_rune.elementalcraft.claptrap": "Claptrap's rune",
   "elementalcraft_rune.elementalcraft.bombadil": "Bombadil's rune",
   "elementalcraft_rune.elementalcraft.tzeentch": "Tzeentch's rune",
+  "elementalcraft_rune.elementalcraft.creative": "Creative rune",
 
   "material.elementalcraft.air_silk": "Air Silk",
   "material.elementalcraft.whiterock": "White Rock",
