--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+1.18.1-4.1.4:
+
+- fix source altars still not spawning
+- fix source altar spawning in the sky
+- fix crystalazier output
+- fix ordered sorter not saving
+
+
 1.18.1-4.1.3:
 
 - fix receptacle not copying traits
