--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -173,6 +173,7 @@
   "block.elementalcraft.shrine_upgrade_crystal_harvest": "Crystal Harvest Shrine Upgrade",
 
   "block.elementalcraft.inert_crystal_ore": "Inert Crystal Ore",
+  "block.elementalcraft.deepslate_inert_crystal_ore": "Deepslate Inert Crystal Ore",
   "block.elementalcraft.whiterock": "White Rock",
   "block.elementalcraft.whiterock_slab": "White Rock Slab",
   "block.elementalcraft.whiterock_stairs": "White Rock Stairs",
