--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+- add element gauge in tooltip
+- remove logspam when patchouli is absent
+
+
+
 1.18.1-4.1.7:
 
 - fix patchouli not loading (issue #69)
