--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,14 @@
+1.18.2-4.2.1:
+
+- fix build errors
+- fix jei interaction
+
+
+1.18.2-4.2.0:
+
+- port to 1.18.2
 - add element gauge in tooltip
 - remove logspam when patchouli is absent
-
 
 
 1.18.1-4.1.7:
