--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+1.18.2-4.3.1:
+
+- cleanup display in jei
+- improve jei integration
+- fix server crash
+
+
 1.18.2-4.3.0:
 
 - add back mekanism interaction
