--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,14 @@
+1.18.2-4.3.2:
+
+- fix crash with JEI and CC Tweaker
+- jix book entry (issue #74)
+
+
 1.18.2-4.3.1:
 
-- cleanup display in jei
+- cleanup display in JEI
 - improve jei integration
-- fix server crash
+- fix server crash (issue #79)
 
 
 1.18.2-4.3.0:
