--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -111,6 +111,7 @@
   "block.elementalcraft.extractor_improved": "Improved Element Extractor",
   "block.elementalcraft.evaporator": "Element Evaporator",
   "block.elementalcraft.solar_synthesizer": "Solar Element Synthesizer",
+  "block.elementalcraft.mana_synthesizer": "Mana Element Synthesizer",
   "block.elementalcraft.diffuser": "Element Diffuser",
   "block.elementalcraft.infuser": "Element Infuser",
   "block.elementalcraft.binder": "Element Binder",
@@ -165,6 +166,7 @@
   "block.elementalcraft.shrine_upgrade_planting": "Planting Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_boneless_growth": "Boneless Growth Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_pickup": "Pickup Shrine Upgrade",
+  "block.elementalcraft.shrine_upgrade_vortex": "Vortex Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_nectar": "Nectar Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_mystical_grove": "Mystical Grove Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_stem_pollination": "Stem Pollination Shrine Upgrade",
@@ -319,6 +321,7 @@
   "tooltip.elementalcraft.planting": "Plant back harvested crops",
   "tooltip.elementalcraft.boneless_growth": "Can grow crops that don't accept bonemeal",
   "tooltip.elementalcraft.pickup": "Will instantly pickup all items within range",
+  "tooltip.elementalcraft.vortex": "Drag creatures instead of items",
   "tooltip.elementalcraft.nectar": "Give nectar to bees instead of feeding humans",
   "tooltip.elementalcraft.mystical_grove": "Plant mystical flowers instead of traditional flowers",
   "tooltip.elementalcraft.stem_pollination": "Stem crops can now be grown to fruit",
