--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -223,7 +223,9 @@
   "spell.elementalcraft.dash": "Dash",
   "spell.elementalcraft.silk_vein": "Silk Vein",
   "spell.elementalcraft.translocation": "Translocation",
-  
+  "spell.elementalcraft.feather_spikes": "Feather Spikes",
+  "spell.elementalcraft.shockwave": "Shockwave",
+
   "spell.elementalcraft.heal": "Healing",
   "spell.elementalcraft.speed": "Speed",
 
