--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -225,6 +225,7 @@
   "spell.elementalcraft.translocation": "Translocation",
   "spell.elementalcraft.feather_spikes": "Feather Spikes",
   "spell.elementalcraft.shockwave": "Shockwave",
+  "spell.elementalcraft.air_shield": "Air Shield",
 
   "spell.elementalcraft.heal": "Healing",
   "spell.elementalcraft.speed": "Speed",
@@ -375,8 +376,9 @@
   "message.elementalcraft.disconnect": "Disconnected",
   "message.elementalcraft.extract": "Extracting",
   "message.elementalcraft.insert": "Inserting",
+  "message.elementalcraft.missing_springaline": "You don't have a springaline shard in your inventory",
 
-  "elementalcraft.landing": "$(thing)ElementalCraft$() is a magic mod based around the 4 $(thing)elements$(): $(thing)fire$(), $(thing)water$(), $(thing)earth$() and $(thing)air$().",
+  "elementalcraft.landing": "$(thing)ElementalCraft$() is a magic mod based around the 4 $(thing)elements$(): $(thing)fire$(), $(thing)water$(), $(thing)earth$() and $(thing)air$().$(br2)You can you can also find more information on the wiki:  $(link)https://wiki.elementalcraft.org/$().",
 
   "elementalcraft.category.basics": "Basics",
   "elementalcraft.category.basics.desc": "Basics and early-game mechanics.",
