--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+1.18.2-4.4.7:
+
+- add item bar with element colors for containers and holders
+- fix a potential crash (issue #89)
+- fix datapack version
+
+
 1.18.2-4.4.6:
 
 - diurnal/nocturnal source trait no longer affect sources in dimensions with no day/night circle
