--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -381,7 +381,7 @@
   "message.elementalcraft.insert": "Inserting",
   "message.elementalcraft.missing_springaline": "You don't have a springaline shard in your inventory",
 
-  "elementalcraft.landing": "$(thing)ElementalCraft$() is a magic mod based around the 4 $(thing)elements$(): $(thing)fire$(), $(thing)water$(), $(thing)earth$() and $(thing)air$().$(br2)You can you can also find more information on the wiki:  $(link)https://wiki.elementalcraft.org/$().",
+  "elementalcraft.landing": "$(thing)ElementalCraft$() is a magic mod based around the 4 $(thing)elements$(): $(thing)fire$(), $(thing)water$(), $(thing)earth$() and $(thing)air$().$(br2)You can you can also find more information on the wiki:  $(l/https://wiki.elementalcraft.org/)https://wiki.elementalcraft.org/$().",
 
   "elementalcraft.category.basics": "Basics",
   "elementalcraft.category.basics.desc": "Basics and early-game mechanics.",
