--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+1.18.2-4.4.13:
+
+- fix elementopedia entry
+- fix some typos
+- fix binder with empty slots
+
+
 1.18.2-4.4.12:
 
 - fix elementopedia entry
