--- a/src/main/resources/assets/elementalcraft/lang/zh_cn.json
+++ b/src/main/resources/assets/elementalcraft/lang/zh_cn.json
@@ -414,8 +414,8 @@
 
   "elementalcraft.page.container0": "$(item)元素容器$()是一种元素存储装置，相比$(ec:small_container)小型元素容器$()可以储存$(thing)更多元素$()，同时可适用于所有$(thing)元素器械$()。",
   "elementalcraft.page.extractor0": "$(item)提取器$()用于从$(ec:source)源点$()中提取$(thing)元素$()。$(br2)将$(item)提取器$()放置在$(ec:container)元素容器$()的上、待提取的$(ec:source)源点$()的下方即可。",
-  "elementalcraft.page.evaporator0": "$(item)蒸馏器$()能将$(l:basics/shards)元素碎片$()转化为$(thing)元素$()，但转化速度非常慢。$(br2)将蒸馏器放置在$(ec:tank)元素容器$()上，再放入元素碎片即可。",
-  "elementalcraft.page.infuser0": "现在你可以提取$(item)元素$()，那么是时候用它们来灌注了。$(br2)先将$(item)灌注器$()放置在$(ec:tank)元素容器$()上，然后用$(ec:pipe)导管$()连接依附有$(ec:extractor)提取器$()的元素容器，最后调整导管的连接状态即可。",
+  "elementalcraft.page.evaporator0": "$(item)蒸馏器$()能将$(l:basics/shards)元素碎片$()转化为$(thing)元素$()，但转化速度非常慢。$(br2)将蒸馏器放置在$(ec:container)元素容器$()上，再放入元素碎片即可。",
+  "elementalcraft.page.infuser0": "现在你可以提取$(item)元素$()，那么是时候用它们来灌注了。$(br2)先将$(item)灌注器$()放置在$(ec:container)元素容器$()上，然后用$(ec:pipe)导管$()连接依附有$(ec:extractor)提取器$()的元素容器，最后调整导管的连接状态即可。",
   "elementalcraft.page.small_container0": "$(item)小型元素容器$()是一个简易的$(thing)元素$()储存装这，可被用来为一些基础的$(thing)元素器械$()供应$(thing)元素$()。所有$(thing)元素器械$()均需放置在$(item)元素容器$()上方才能工作。$(br2)$(item)小型元素容器$()只能与$(ec:extractor)提取器$()和$(ec:infuser)灌注器$()协同工作。$(br2)你可以用$(ec:pipe)导管$()连接两个元素容器来转移$(thing)元素$()，记得调整导管的连接状态。",
   "elementalcraft.page.binder0": "$(item)聚合器$()是元素工艺中最重要的$(thing)元素器械$()之一，通过引导$(thing)元素$()形成原子链接，它能将多个物品逐个结合在一起。$(br2)值得注意的是，物品摆放的顺序是有考究的，请善用 JEI 合成表。$(br)至于其他$(thing)元素器械$()，$(item)进阶元素聚合器$()需要放置在非$(ec:small_container)小型元素容器$()的$(ec:container)元素容器$()之上。",
   "elementalcraft.page.solar_synthesizer0": "$(item)日光元素合成器$()能从阳光中收获$(thing)元素$()，需要露天放置，并且只能在白天工作。同时，还需要插入透镜使其开始工作。$(br2)$(item)日光合成器$()需要放置在$(ec:container)元素容器$()上。",
